# twistribution

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_bernoulli.py  test_constant.py  test_discrete.py  test_normal.py  test_poisson.py  test_uniform.py  utils_for_testing.py
twistribution/: bernoulli.py  constant.py  constants.py  discrete.py  distribution.py  normal.py  poisson.py  uniform.py
