[tool.poetry]
name = "twistribution"
version = "0.1.0"
description = "Twisting probability distributions"
authors = ["Matthew Strawbridge <matthew@philoxenic.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
